--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,15 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+video {
+    position: absolute;
+    transform: rotate(90deg);
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+    visibility: visible;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
@@ -11069,7 +11078,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/Cover.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
